--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 # Get your API key from Google AI Studio: https://aistudio.google.com/app/apikey
-GEMINI_API_KEY="YOUR_API_KEY_HERE"
+GEMINI_API_KEY="AIzaSyB0vSHWzrWiPKD7nXpCGGjh3Xi4RNZYEMM"
